CS445 - Compilers/assign1/scanner.output
Rules useless in parser due to conflicts

   22 scopedtypespecifier: typespecifier
   23                    | STATIC typespecifier


State 37 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 80 conflicts: 4 shift/reduce
State 106 conflicts: 2 shift/reduce
State 109 conflicts: 4 shift/reduce
State 113 conflicts: 15 shift/reduce
State 125 conflicts: 2 shift/reduce
State 160 conflicts: 1 shift/reduce
State 169 conflicts: 18 shift/reduce
State 171 conflicts: 16 shift/reduce
State 173 conflicts: 24 reduce/reduce
State 176 conflicts: 4 shift/reduce, 24 reduce/reduce
State 181 conflicts: 4 shift/reduce, 24 reduce/reduce
State 188 conflicts: 2 shift/reduce
State 190 conflicts: 2 shift/reduce
State 193 conflicts: 2 shift/reduce
State 195 conflicts: 2 shift/reduce
State 197 conflicts: 2 shift/reduce
State 200 conflicts: 2 shift/reduce
State 224 conflicts: 6 shift/reduce
State 227 conflicts: 2 shift/reduce
State 253 conflicts: 1 shift/reduce
State 261 conflicts: 4 shift/reduce
State 272 conflicts: 4 shift/reduce
State 274 conflicts: 4 shift/reduce
State 296 conflicts: 4 shift/reduce
State 298 conflicts: 4 shift/reduce
State 306 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarationlist

    2 declarationlist: declarationlist declaration
    3                | declaration
    4                | error

    5 declaration: vardeclaration
    6            | fundeclaration

    7 vardeclaration: typespecifier vardecllist SEMI
    8               | typespecifier error SEMI

    9 scopedvardeclaration: scopedtypespecifier vardecllist SEMI
   10                     | typespecifier error SEMI
   11                     | STATIC typespecifier vardecllist SEMI
   12                     | typespecifier vardecllist SEMI

   13 vardecllist: vardecllist COMMA vardeclinitialize
   14            | vardeclinitialize
   15            | error COMMA vardeclinitialize

   16 vardeclinitialize: vardeclid
   17                  | vardeclid COLON simpleexpression
   18                  | vardeclid COLON error

   19 vardeclid: ID
   20          | ID LBRACKET NUMCONST RBRACKET
   21          | ID LBRACKET error

   22 scopedtypespecifier: typespecifier
   23                    | STATIC typespecifier

   24 typespecifier: INT
   25              | BOOL
   26              | CHAR

   27 fundeclaration: typespecifier ID LPAREN params RPAREN statement
   28               | ID LPAREN params RPAREN statement
   29               | typespecifier error LPAREN params RPAREN statement
   30               | typespecifier ID LPAREN error
   31               | ID LPAREN error RPAREN statement
   32               | error RPAREN statement

   33 params: paramlist
   34       | %empty

   35 paramlist: paramlist SEMI paramtypelist
   36          | paramtypelist
   37          | error SEMI paramtypelist

   38 paramtypelist: typespecifier paramidlist
   39              | typespecifier error

   40 paramidlist: paramidlist COMMA paramid
   41            | paramid
   42            | error COMMA paramid
   43            | paramidlist COMMA error

   44 paramid: ID
   45        | ID LBRACKET RBRACKET
   46        | error LBRACKET NUMCONST RBRACKET
   47        | ID LBRACKET error

   48 statement: matchedselectionstmt
   49          | unmatchedselectionstmt
   50          | matchedselectionstmt error
   51          | unmatchedselectionstmt error

   52 sstatement: expressionstmt
   53           | compoundstmt
   54           | returnstmt
   55           | breakstmt

   56 compoundstmt: LBRACE localdeclarations statementlist RBRACE
   57             | error RBRACE
   58             | LBRACE error statementlist RBRACE

   59 localdeclarations: localdeclarations scopedvardeclaration
   60                  | %empty

   61 statementlist: statementlist statement
   62              | %empty
   63              | statementlist error

   64 expressionstmt: expression SEMI
   65               | SEMI
   66               | error SEMI

   67 matchedselectionstmt: IF LPAREN simpleexpression RPAREN matchedselectionstmt ELSE matchedselectionstmt
   68                     | WHILE LPAREN simpleexpression RPAREN matchedselectionstmt
   69                     | FOREACH LPAREN mutable IN simpleexpression RPAREN matchedselectionstmt
   70                     | sstatement
   71                     | IF LPAREN error
   72                     | error RPAREN matchedselectionstmt ELSE matchedselectionstmt
   73                     | WHILE LPAREN error
   74                     | FOREACH LPAREN error

   75 unmatchedselectionstmt: IF LPAREN simpleexpression RPAREN statement
   76                       | IF LPAREN simpleexpression RPAREN matchedselectionstmt ELSE unmatchedselectionstmt
   77                       | WHILE LPAREN simpleexpression RPAREN unmatchedselectionstmt
   78                       | FOREACH LPAREN mutable IN simpleexpression RPAREN unmatchedselectionstmt
   79                       | IF LPAREN simpleexpression RPAREN error ELSE unmatchedselectionstmt
   80                       | IF LPAREN error
   81                       | WHILE LPAREN error
   82                       | FOREACH LPAREN error
   83                       | error RPAREN statement

   84 returnstmt: RETURN SEMI
   85           | RETURN expression SEMI
   86           | RETURN error

   87 breakstmt: BREAK SEMI

   88 expression: mutable ASSIGN expression
   89           | mutable PASSIGN expression
   90           | mutable MASSIGN expression
   91           | mutable INC
   92           | mutable DEC
   93           | simpleexpression
   94           | error ASSIGN expression
   95           | mutable ASSIGN error
   96           | error INC
   97           | error DEC
   98           | mutable error expression

   99 simpleexpression: simpleexpression OR andexpression
  100                 | andexpression
  101                 | error OR OR
  102                 | simpleexpression OR error

  103 andexpression: andexpression AND unaryrelexpression
  104              | unaryrelexpression
  105              | error AND unaryrelexpression
  106              | OR AND error

  107 unaryrelexpression: NOT unaryrelexpression
  108                   | relexpression
  109                   | NOT error

  110 relexpression: additiveexpression relop additiveexpression
  111              | additiveexpression
  112              | error relop additiveexpression
  113              | additiveexpression relop error

  114 relop: LEQ
  115      | LESSER
  116      | GREATER
  117      | GEQ
  118      | EQUIV
  119      | NEQ

  120 additiveexpression: additiveexpression sumop term
  121                   | term
  122                   | error sumop term
  123                   | additiveexpression sumop error

  124 sumop: PLUS
  125      | MINUS

  126 term: term mulop unaryexpression
  127     | unaryexpression
  128     | error mulop unaryexpression
  129     | term mulop error

  130 mulop: MULTI
  131      | DIVIDE
  132      | MOD

  133 unaryexpression: unaryop unaryexpression
  134                | factor
  135                | unaryop error

  136 unaryop: MINUS
  137        | MULTI

  138 factor: immutable
  139       | mutable

  140 mutable: ID
  141        | ID LBRACKET expression RBRACKET
  142        | ID LBRACKET error
  143        | error RBRACKET

  144 immutable: LPAREN expression RPAREN
  145          | call
  146          | constant
  147          | LPAREN error
  148          | error RPAREN

  149 call: ID LPAREN args RPAREN
  150     | error LPAREN args RPAREN
  151     | ID LPAREN error

  152 args: arglist
  153     | %empty

  154 arglist: arglist COMMA expression
  155        | expression
  156        | error COMMA expression

  157 constant: NUMCONST
  158         | CHARCONST
  159         | STRINGCONST
  160         | TRUE
  161         | FALSE


Terminals, with rules where they appear

$end (0) 0
error (256) 4 8 10 15 18 21 29 30 31 32 37 39 42 43 46 47 50 51 57
    58 63 66 71 72 73 74 79 80 81 82 83 86 94 95 96 97 98 101 102 105
    106 109 112 113 122 123 128 129 135 142 143 147 148 150 151 156
ID (258) 19 20 21 27 28 30 31 44 45 47 140 141 142 149 151
NUMCONST (259) 20 46 157
CHARCONST (260) 158
STRINGCONST (261) 159
AND (262) 103 105 106
BREAK (263) 87
BOOL (264) 25
CHAR (265) 26
ELSE (266) 67 72 76 79
FALSE (267) 161
FOREACH (268) 69 74 78 82
IF (269) 67 71 75 76 79 80
IN (270) 69 78
INT (271) 24
OR (272) 99 101 102 106
NOT (273) 107 109
RETURN (274) 84 85 86
TRUE (275) 160
STATIC (276) 11 23
WHILE (277) 68 73 77 81
COMMA (278) 13 15 40 42 43 154 156
LBRACKET (279) 20 21 45 46 47 141 142
RBRACKET (280) 20 45 46 141 143
LPAREN (281) 27 28 29 30 31 67 68 69 71 73 74 75 76 77 78 79 80 81
    82 144 147 149 150 151
RPAREN (282) 27 28 29 31 32 67 68 69 72 75 76 77 78 79 83 144 148 149
    150
LBRACE (283) 56 58
RBRACE (284) 56 57 58
SEMI (285) 7 8 9 10 11 12 35 37 64 65 66 84 85 87
EQUIV (286) 118
NEQ (287) 119
LEQ (288) 114
LESSER (289) 115
GEQ (290) 117
GREATER (291) 116
ASSIGN (292) 88 94 95
PASSIGN (293) 89
MASSIGN (294) 90
DEC (295) 92 97
INC (296) 91 96
COLON (297) 17 18
PLUS (298) 124
MINUS (299) 125 136
DIVIDE (300) 131
MOD (301) 132
MULTI (302) 130 137


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
declarationlist (50)
    on left: 2 3 4, on right: 1 2
declaration (51)
    on left: 5 6, on right: 2 3
vardeclaration (52)
    on left: 7 8, on right: 5
scopedvardeclaration (53)
    on left: 9 10 11 12, on right: 59
vardecllist (54)
    on left: 13 14 15, on right: 7 9 11 12 13
vardeclinitialize (55)
    on left: 16 17 18, on right: 13 14 15
vardeclid (56)
    on left: 19 20 21, on right: 16 17 18
scopedtypespecifier (57)
    on left: 22 23, on right: 9
typespecifier (58)
    on left: 24 25 26, on right: 7 8 10 11 12 22 23 27 29 30 38 39
fundeclaration (59)
    on left: 27 28 29 30 31 32, on right: 6
params (60)
    on left: 33 34, on right: 27 28 29
paramlist (61)
    on left: 35 36 37, on right: 33 35
paramtypelist (62)
    on left: 38 39, on right: 35 36 37
paramidlist (63)
    on left: 40 41 42 43, on right: 38 40 43
paramid (64)
    on left: 44 45 46 47, on right: 40 41 42
statement (65)
    on left: 48 49 50 51, on right: 27 28 29 31 32 61 75 83
sstatement (66)
    on left: 52 53 54 55, on right: 70
compoundstmt (67)
    on left: 56 57 58, on right: 53
localdeclarations (68)
    on left: 59 60, on right: 56 59
statementlist (69)
    on left: 61 62 63, on right: 56 58 61 63
expressionstmt (70)
    on left: 64 65 66, on right: 52
matchedselectionstmt (71)
    on left: 67 68 69 70 71 72 73 74, on right: 48 50 67 68 69 72 76
unmatchedselectionstmt (72)
    on left: 75 76 77 78 79 80 81 82 83, on right: 49 51 76 77 78 79
returnstmt (73)
    on left: 84 85 86, on right: 54
breakstmt (74)
    on left: 87, on right: 55
expression (75)
    on left: 88 89 90 91 92 93 94 95 96 97 98, on right: 64 85 88 89
    90 94 98 141 144 154 155 156
simpleexpression (76)
    on left: 99 100 101 102, on right: 17 67 68 69 75 76 77 78 79 93
    99 102
andexpression (77)
    on left: 103 104 105 106, on right: 99 100 103
unaryrelexpression (78)
    on left: 107 108 109, on right: 103 104 105 107
relexpression (79)
    on left: 110 111 112 113, on right: 108
relop (80)
    on left: 114 115 116 117 118 119, on right: 110 112 113
additiveexpression (81)
    on left: 120 121 122 123, on right: 110 111 112 113 120 123
sumop (82)
    on left: 124 125, on right: 120 122 123
term (83)
    on left: 126 127 128 129, on right: 120 121 122 126 129
mulop (84)
    on left: 130 131 132, on right: 126 128 129
unaryexpression (85)
    on left: 133 134 135, on right: 126 127 128 133
unaryop (86)
    on left: 136 137, on right: 133 135
factor (87)
    on left: 138 139, on right: 134
mutable (88)
    on left: 140 141 142 143, on right: 69 78 88 89 90 91 92 95 98
    139
immutable (89)
    on left: 144 145 146 147 148, on right: 138
call (90)
    on left: 149 150 151, on right: 145
args (91)
    on left: 152 153, on right: 149 150
arglist (92)
    on left: 154 155 156, on right: 152 154
constant (93)
    on left: 157 158 159 160 161, on right: 146


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    program          go to state 6
    declarationlist  go to state 7
    declaration      go to state 8
    vardeclaration   go to state 9
    typespecifier    go to state 10
    fundeclaration   go to state 11


State 1

    4 declarationlist: error .
   32 fundeclaration: error . RPAREN statement

    RPAREN  shift, and go to state 12

    $default  reduce using rule 4 (declarationlist)


State 2

   28 fundeclaration: ID . LPAREN params RPAREN statement
   31               | ID . LPAREN error RPAREN statement

    LPAREN  shift, and go to state 13


State 3

   25 typespecifier: BOOL .

    $default  reduce using rule 25 (typespecifier)


State 4

   26 typespecifier: CHAR .

    $default  reduce using rule 26 (typespecifier)


State 5

   24 typespecifier: INT .

    $default  reduce using rule 24 (typespecifier)


State 6

    0 $accept: program . $end

    $end  shift, and go to state 14


State 7

    1 program: declarationlist .
    2 declarationlist: declarationlist . declaration

    error  shift, and go to state 15
    ID     shift, and go to state 2
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    $end  reduce using rule 1 (program)

    declaration     go to state 16
    vardeclaration  go to state 9
    typespecifier   go to state 10
    fundeclaration  go to state 11


State 8

    3 declarationlist: declaration .

    $default  reduce using rule 3 (declarationlist)


State 9

    5 declaration: vardeclaration .

    $default  reduce using rule 5 (declaration)


State 10

    7 vardeclaration: typespecifier . vardecllist SEMI
    8               | typespecifier . error SEMI
   27 fundeclaration: typespecifier . ID LPAREN params RPAREN statement
   29               | typespecifier . error LPAREN params RPAREN statement
   30               | typespecifier . ID LPAREN error

    error  shift, and go to state 17
    ID     shift, and go to state 18

    vardecllist        go to state 19
    vardeclinitialize  go to state 20
    vardeclid          go to state 21


State 11

    6 declaration: fundeclaration .

    $default  reduce using rule 6 (declaration)


State 12

   32 fundeclaration: error RPAREN . statement

    error        shift, and go to state 22
    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    BREAK        shift, and go to state 27
    FALSE        shift, and go to state 28
    FOREACH      shift, and go to state 29
    IF           shift, and go to state 30
    OR           shift, and go to state 31
    NOT          shift, and go to state 32
    RETURN       shift, and go to state 33
    TRUE         shift, and go to state 34
    WHILE        shift, and go to state 35
    LPAREN       shift, and go to state 36
    LBRACE       shift, and go to state 37
    SEMI         shift, and go to state 38
    MINUS        shift, and go to state 39
    MULTI        shift, and go to state 40

    statement               go to state 41
    sstatement              go to state 42
    compoundstmt            go to state 43
    expressionstmt          go to state 44
    matchedselectionstmt    go to state 45
    unmatchedselectionstmt  go to state 46
    returnstmt              go to state 47
    breakstmt               go to state 48
    expression              go to state 49
    simpleexpression        go to state 50
    andexpression           go to state 51
    unaryrelexpression      go to state 52
    relexpression           go to state 53
    additiveexpression      go to state 54
    term                    go to state 55
    unaryexpression         go to state 56
    unaryop                 go to state 57
    factor                  go to state 58
    mutable                 go to state 59
    immutable               go to state 60
    call                    go to state 61
    constant                go to state 62


State 13

   28 fundeclaration: ID LPAREN . params RPAREN statement
   31               | ID LPAREN . error RPAREN statement

    error  shift, and go to state 63
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    RPAREN  reduce using rule 34 (params)

    typespecifier  go to state 64
    params         go to state 65
    paramlist      go to state 66
    paramtypelist  go to state 67


State 14

    0 $accept: program $end .

    $default  accept


State 15

   32 fundeclaration: error . RPAREN statement

    RPAREN  shift, and go to state 12


State 16

    2 declarationlist: declarationlist declaration .

    $default  reduce using rule 2 (declarationlist)


State 17

    8 vardeclaration: typespecifier error . SEMI
   15 vardecllist: error . COMMA vardeclinitialize
   29 fundeclaration: typespecifier error . LPAREN params RPAREN statement

    COMMA   shift, and go to state 68
    LPAREN  shift, and go to state 69
    SEMI    shift, and go to state 70


State 18

   19 vardeclid: ID .
   20          | ID . LBRACKET NUMCONST RBRACKET
   21          | ID . LBRACKET error
   27 fundeclaration: typespecifier ID . LPAREN params RPAREN statement
   30               | typespecifier ID . LPAREN error

    LBRACKET  shift, and go to state 71
    LPAREN    shift, and go to state 72

    $default  reduce using rule 19 (vardeclid)


State 19

    7 vardeclaration: typespecifier vardecllist . SEMI
   13 vardecllist: vardecllist . COMMA vardeclinitialize

    COMMA  shift, and go to state 73
    SEMI   shift, and go to state 74


State 20

   14 vardecllist: vardeclinitialize .

    $default  reduce using rule 14 (vardecllist)


State 21

   16 vardeclinitialize: vardeclid .
   17                  | vardeclid . COLON simpleexpression
   18                  | vardeclid . COLON error

    COLON  shift, and go to state 75

    $default  reduce using rule 16 (vardeclinitialize)


State 22

   57 compoundstmt: error . RBRACE
   66 expressionstmt: error . SEMI
   72 matchedselectionstmt: error . RPAREN matchedselectionstmt ELSE matchedselectionstmt
   83 unmatchedselectionstmt: error . RPAREN statement
   94 expression: error . ASSIGN expression
   96           | error . INC
   97           | error . DEC
  101 simpleexpression: error . OR OR
  105 andexpression: error . AND unaryrelexpression
  112 relexpression: error . relop additiveexpression
  122 additiveexpression: error . sumop term
  128 term: error . mulop unaryexpression
  143 mutable: error . RBRACKET
  148 immutable: error . RPAREN
  150 call: error . LPAREN args RPAREN

    AND       shift, and go to state 76
    OR        shift, and go to state 77
    RBRACKET  shift, and go to state 78
    LPAREN    shift, and go to state 79
    RPAREN    shift, and go to state 80
    RBRACE    shift, and go to state 81
    SEMI      shift, and go to state 82
    EQUIV     shift, and go to state 83
    NEQ       shift, and go to state 84
    LEQ       shift, and go to state 85
    LESSER    shift, and go to state 86
    GEQ       shift, and go to state 87
    GREATER   shift, and go to state 88
    ASSIGN    shift, and go to state 89
    DEC       shift, and go to state 90
    INC       shift, and go to state 91
    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    DIVIDE    shift, and go to state 94
    MOD       shift, and go to state 95
    MULTI     shift, and go to state 96

    relop  go to state 97
    sumop  go to state 98
    mulop  go to state 99


State 23

  140 mutable: ID .
  141        | ID . LBRACKET expression RBRACKET
  142        | ID . LBRACKET error
  149 call: ID . LPAREN args RPAREN
  151     | ID . LPAREN error

    LBRACKET  shift, and go to state 100
    LPAREN    shift, and go to state 101

    $default  reduce using rule 140 (mutable)


State 24

  157 constant: NUMCONST .

    $default  reduce using rule 157 (constant)


State 25

  158 constant: CHARCONST .

    $default  reduce using rule 158 (constant)


State 26

  159 constant: STRINGCONST .

    $default  reduce using rule 159 (constant)


State 27

   87 breakstmt: BREAK . SEMI

    SEMI  shift, and go to state 102


State 28

  161 constant: FALSE .

    $default  reduce using rule 161 (constant)


State 29

   69 matchedselectionstmt: FOREACH . LPAREN mutable IN simpleexpression RPAREN matchedselectionstmt
   74                     | FOREACH . LPAREN error
   78 unmatchedselectionstmt: FOREACH . LPAREN mutable IN simpleexpression RPAREN unmatchedselectionstmt
   82                       | FOREACH . LPAREN error

    LPAREN  shift, and go to state 103


State 30

   67 matchedselectionstmt: IF . LPAREN simpleexpression RPAREN matchedselectionstmt ELSE matchedselectionstmt
   71                     | IF . LPAREN error
   75 unmatchedselectionstmt: IF . LPAREN simpleexpression RPAREN statement
   76                       | IF . LPAREN simpleexpression RPAREN matchedselectionstmt ELSE unmatchedselectionstmt
   79                       | IF . LPAREN simpleexpression RPAREN error ELSE unmatchedselectionstmt
   80                       | IF . LPAREN error

    LPAREN  shift, and go to state 104


State 31

  106 andexpression: OR . AND error

    AND  shift, and go to state 105


State 32

  107 unaryrelexpression: NOT . unaryrelexpression
  109                   | NOT . error

    error        shift, and go to state 106
    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    FALSE        shift, and go to state 28
    NOT          shift, and go to state 32
    TRUE         shift, and go to state 34
    LPAREN       shift, and go to state 36
    MINUS        shift, and go to state 39
    MULTI        shift, and go to state 40

    unaryrelexpression  go to state 107
    relexpression       go to state 53
    additiveexpression  go to state 54
    term                go to state 55
    unaryexpression     go to state 56
    unaryop             go to state 57
    factor              go to state 58
    mutable             go to state 108
    immutable           go to state 60
    call                go to state 61
    constant            go to state 62


State 33

   84 returnstmt: RETURN . SEMI
   85           | RETURN . expression SEMI
   86           | RETURN . error

    error        shift, and go to state 109
    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    FALSE        shift, and go to state 28
    OR           shift, and go to state 31
    NOT          shift, and go to state 32
    TRUE         shift, and go to state 34
    LPAREN       shift, and go to state 36
    SEMI         shift, and go to state 110
    MINUS        shift, and go to state 39
    MULTI        shift, and go to state 40

    expression          go to state 111
    simpleexpression    go to state 50
    andexpression       go to state 51
    unaryrelexpression  go to state 52
    relexpression       go to state 53
    additiveexpression  go to state 54
    term                go to state 55
    unaryexpression     go to state 56
    unaryop             go to state 57
    factor              go to state 58
    mutable             go to state 59
    immutable           go to state 60
    call                go to state 61
    constant            go to state 62


State 34

  160 constant: TRUE .

    $default  reduce using rule 160 (constant)


State 35

   68 matchedselectionstmt: WHILE . LPAREN simpleexpression RPAREN matchedselectionstmt
   73                     | WHILE . LPAREN error
   77 unmatchedselectionstmt: WHILE . LPAREN simpleexpression RPAREN unmatchedselectionstmt
   81                       | WHILE . LPAREN error

    LPAREN  shift, and go to state 112


State 36

  144 immutable: LPAREN . expression RPAREN
  147          | LPAREN . error

    error        shift, and go to state 113
    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    FALSE        shift, and go to state 28
    OR           shift, and go to state 31
    NOT          shift, and go to state 32
    TRUE         shift, and go to state 34
    LPAREN       shift, and go to state 36
    MINUS        shift, and go to state 39
    MULTI        shift, and go to state 40

    expression          go to state 114
    simpleexpression    go to state 50
    andexpression       go to state 51
    unaryrelexpression  go to state 52
    relexpression       go to state 53
    additiveexpression  go to state 54
    term                go to state 55
    unaryexpression     go to state 56
    unaryop             go to state 57
    factor              go to state 58
    mutable             go to state 59
    immutable           go to state 60
    call                go to state 61
    constant            go to state 62


State 37

   56 compoundstmt: LBRACE . localdeclarations statementlist RBRACE
   58             | LBRACE . error statementlist RBRACE

    error  shift, and go to state 115

    error        [reduce using rule 60 (localdeclarations)]
    ID           reduce using rule 60 (localdeclarations)
    NUMCONST     reduce using rule 60 (localdeclarations)
    CHARCONST    reduce using rule 60 (localdeclarations)
    STRINGCONST  reduce using rule 60 (localdeclarations)
    BREAK        reduce using rule 60 (localdeclarations)
    BOOL         reduce using rule 60 (localdeclarations)
    CHAR         reduce using rule 60 (localdeclarations)
    FALSE        reduce using rule 60 (localdeclarations)
    FOREACH      reduce using rule 60 (localdeclarations)
    IF           reduce using rule 60 (localdeclarations)
    INT          reduce using rule 60 (localdeclarations)
    OR           reduce using rule 60 (localdeclarations)
    NOT          reduce using rule 60 (localdeclarations)
    RETURN       reduce using rule 60 (localdeclarations)
    TRUE         reduce using rule 60 (localdeclarations)
    STATIC       reduce using rule 60 (localdeclarations)
    WHILE        reduce using rule 60 (localdeclarations)
    LPAREN       reduce using rule 60 (localdeclarations)
    LBRACE       reduce using rule 60 (localdeclarations)
    RBRACE       reduce using rule 60 (localdeclarations)
    SEMI         reduce using rule 60 (localdeclarations)
    MINUS        reduce using rule 60 (localdeclarations)
    MULTI        reduce using rule 60 (localdeclarations)

    localdeclarations  go to state 116


State 38

   65 expressionstmt: SEMI .

    $default  reduce using rule 65 (expressionstmt)


State 39

  136 unaryop: MINUS .

    $default  reduce using rule 136 (unaryop)


State 40

  137 unaryop: MULTI .

    $default  reduce using rule 137 (unaryop)


State 41

   32 fundeclaration: error RPAREN statement .

    $default  reduce using rule 32 (fundeclaration)


State 42

   70 matchedselectionstmt: sstatement .

    $default  reduce using rule 70 (matchedselectionstmt)


State 43

   53 sstatement: compoundstmt .

    $default  reduce using rule 53 (sstatement)


State 44

   52 sstatement: expressionstmt .

    $default  reduce using rule 52 (sstatement)


State 45

   48 statement: matchedselectionstmt .
   50          | matchedselectionstmt . error

    error  shift, and go to state 117

    $end         reduce using rule 48 (statement)
    error        [reduce using rule 48 (statement)]
    ID           reduce using rule 48 (statement)
    NUMCONST     reduce using rule 48 (statement)
    CHARCONST    reduce using rule 48 (statement)
    STRINGCONST  reduce using rule 48 (statement)
    BREAK        reduce using rule 48 (statement)
    BOOL         reduce using rule 48 (statement)
    CHAR         reduce using rule 48 (statement)
    FALSE        reduce using rule 48 (statement)
    FOREACH      reduce using rule 48 (statement)
    IF           reduce using rule 48 (statement)
    INT          reduce using rule 48 (statement)
    OR           reduce using rule 48 (statement)
    NOT          reduce using rule 48 (statement)
    RETURN       reduce using rule 48 (statement)
    TRUE         reduce using rule 48 (statement)
    WHILE        reduce using rule 48 (statement)
    LPAREN       reduce using rule 48 (statement)
    LBRACE       reduce using rule 48 (statement)
    RBRACE       reduce using rule 48 (statement)
    SEMI         reduce using rule 48 (statement)
    MINUS        reduce using rule 48 (statement)
    MULTI        reduce using rule 48 (statement)


State 46

   49 statement: unmatchedselectionstmt .
   51          | unmatchedselectionstmt . error

    error  shift, and go to state 118

    $end         reduce using rule 49 (statement)
    error        [reduce using rule 49 (statement)]
    ID           reduce using rule 49 (statement)
    NUMCONST     reduce using rule 49 (statement)
    CHARCONST    reduce using rule 49 (statement)
    STRINGCONST  reduce using rule 49 (statement)
    BREAK        reduce using rule 49 (statement)
    BOOL         reduce using rule 49 (statement)
    CHAR         reduce using rule 49 (statement)
    FALSE        reduce using rule 49 (statement)
    FOREACH      reduce using rule 49 (statement)
    IF           reduce using rule 49 (statement)
    INT          reduce using rule 49 (statement)
    OR           reduce using rule 49 (statement)
    NOT          reduce using rule 49 (statement)
    RETURN       reduce using rule 49 (statement)
    TRUE         reduce using rule 49 (statement)
    WHILE        reduce using rule 49 (statement)
    LPAREN       reduce using rule 49 (statement)
    LBRACE       reduce using rule 49 (statement)
    RBRACE       reduce using rule 49 (statement)
    SEMI         reduce using rule 49 (statement)
    MINUS        reduce using rule 49 (statement)
    MULTI        reduce using rule 49 (statement)


State 47

   54 sstatement: returnstmt .

    $default  reduce using rule 54 (sstatement)


State 48

   55 sstatement: breakstmt .

    $default  reduce using rule 55 (sstatement)


State 49

   64 expressionstmt: expression . SEMI

    SEMI  shift, and go to state 119


State 50

   93 expression: simpleexpression .
   99 simpleexpression: simpleexpression . OR andexpression
  102                 | simpleexpression . OR error

    OR  shift, and go to state 120

    $default  reduce using rule 93 (expression)


State 51

  100 simpleexpression: andexpression .
  103 andexpression: andexpression . AND unaryrelexpression

    AND  shift, and go to state 121

    $default  reduce using rule 100 (simpleexpression)


State 52

  104 andexpression: unaryrelexpression .

    $default  reduce using rule 104 (andexpression)


State 53

  108 unaryrelexpression: relexpression .

    $default  reduce using rule 108 (unaryrelexpression)


State 54

  110 relexpression: additiveexpression . relop additiveexpression
  111              | additiveexpression .
  113              | additiveexpression . relop error
  120 additiveexpression: additiveexpression . sumop term
  123                   | additiveexpression . sumop error

    EQUIV    shift, and go to state 83
    NEQ      shift, and go to state 84
    LEQ      shift, and go to state 85
    LESSER   shift, and go to state 86
    GEQ      shift, and go to state 87
    GREATER  shift, and go to state 88
    PLUS     shift, and go to state 92
    MINUS    shift, and go to state 93

    $default  reduce using rule 111 (relexpression)

    relop  go to state 122
    sumop  go to state 123


State 55

  121 additiveexpression: term .
  126 term: term . mulop unaryexpression
  129     | term . mulop error

    DIVIDE  shift, and go to state 94
    MOD     shift, and go to state 95
    MULTI   shift, and go to state 96

    $default  reduce using rule 121 (additiveexpression)

    mulop  go to state 124


State 56

  127 term: unaryexpression .

    $default  reduce using rule 127 (term)


State 57

  133 unaryexpression: unaryop . unaryexpression
  135                | unaryop . error

    error        shift, and go to state 125
    ID           shift, and go to state 23
    NUMCONST     shift, and go to state 24
    CHARCONST    shift, and go to state 25
    STRINGCONST  shift, and go to state 26
    FALSE        shift, and go to state 28
    TRUE         shift, and go to state 34
    LPAREN       shift, and go to state 36
    MINUS        shift, and go to state 39
    MULTI        shift, and go to state 40

    unaryexpression  go to state 126
    unaryop          go to state 57
    factor           go to state 58
    mutable          go to state 108
    immutable        go to state 60
    call             go to state 61
    constant         go to state 62


State 58

  134 unaryexpression: factor .

    $default  reduce using rule 134 (unaryexpression)


State 59

   88 expression: mutable . ASSIGN expression
   89           | mutable . PASSIGN expression
   90           | mutable . MASSIGN expression
   91           | mutable . INC
   92           | mutable . DEC
   95           | mutable . ASSIGN error
   98           | mutable . error expression
  139 factor: mutable .

    error    shift, and go to state 127
    ASSIGN   shift, and go to state 128
    PASSIGN  shift, and go to state 129
    MASSIGN  shift, and go to state 130
    DEC      shift, and go to state 131
    INC      shift, and go to state 132

    AND       reduce using rule 139 (factor)
    OR        reduce using rule 139 (factor)
    COMMA     reduce using rule 139 (factor)
    RBRACKET  reduce using rule 139 (factor)
    RPAREN    reduce using rule 139 (factor)
    SEMI      reduce using rule 139 (factor)
    EQUIV     reduce using rule 139 (factor)
    NEQ       reduce using rule 139 (factor)
    LEQ       reduce using rule 139 (factor)
    LESSER    reduce using rule 139 (factor)
    GEQ       reduce using rule 139 (factor)
    GREATER   reduce using rule 139 (factor)
    PLUS      reduce using rule 139 (factor)
    MINUS     reduce using rule 139 (factor)
    DIVIDE    reduce using rule 139 (factor)
    MOD       reduce using rule 139 (factor)
    MULTI     reduce using rule 139 (factor)


State 60

  138 factor: immutable .

    $default  reduce using rule 138 (factor)


State 61

  145 immutable: call .

    $default  reduce using rule 145 (immutable)


State 62

  146 immutable: constant .

    $default  reduce using rule 146 (immutable)


State 63

   31 fundeclaration: ID LPAREN error . RPAREN statement
   37 paramlist: error . SEMI paramtypelist

    RPAREN  shift, and go to state 133
    SEMI    shift, and go to state 134


State 64

   38 paramtypelist: typespecifier . paramidlist
   39              | typespecifier . error

    error  shift, and go to state 135
    ID     shift, and go to state 136

    paramidlist  go to state 137
    paramid      go to state 138


State 65

   28 fundeclaration: ID LPAREN params . RPAREN statement

    RPAREN  shift, and go to state 139


State 66

   33 params: paramlist .
   35 paramlist: paramlist . SEMI paramtypelist

    SEMI  shift, and go to state 140

    $default  reduce using rule 33 (params)


State 67

   36 paramlist: paramtypelist .
